[gd_scene load_steps=11 format=3 uid="uid://0cyusegotpap"]

[ext_resource type="Script" path="res://script/GameManager.gd" id="1_75m4g"]
[ext_resource type="PackedScene" uid="uid://cpq5x2mnxqdtf" path="res://scene/player.tscn" id="1_j3qg8"]
[ext_resource type="PackedScene" uid="uid://dtfi71q3hqh7v" path="res://scene/top_bot.tscn" id="1_q00cy"]
[ext_resource type="PackedScene" uid="uid://cwr12l1nvsy04" path="res://scene/spawner.tscn" id="3_f3m46"]
[ext_resource type="PackedScene" uid="uid://bcupwc5bg5oxk" path="res://scene/ui.tscn" id="5_0dual"]
[ext_resource type="Script" path="res://script/Camera2D.gd" id="5_y1gq7"]
[ext_resource type="AudioStream" uid="uid://d1lpapf1tiajw" path="res://assets/music&sound_effect/game-start-6104.mp3" id="7_e45pi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4dwou"]
size = Vector2(463, 2619)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_daxvp"]
size = Vector2(4360, 404)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1y2dm"]
emission_shape = 3
emission_box_extents = Vector3(150, 1, 1)
particle_flag_disable_z = true
direction = Vector3(-1, 1, 0)
spread = 0.0
flatness = 1.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 27.0
initial_velocity_max = 90.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.0
scale_max = 11.0
color = Color(0.929412, 0.133333, 0.141176, 0.741176)

[node name="world" type="Node"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_75m4g")

[node name="Player" parent="." instance=ExtResource("1_j3qg8")]
metadata/_edit_lock_ = true

[node name="TopBot" parent="." instance=ExtResource("1_q00cy")]
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)
script = ExtResource("5_y1gq7")
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="Camera2D"]

[node name="UI" parent="." instance=ExtResource("5_0dual")]

[node name="Spawner" parent="." instance=ExtResource("3_f3m46")]

[node name="Resetters" type="Node" parent="."]

[node name="Resetter" type="Area2D" parent="Resetters"]
position = Vector2(-1583.5, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resetters/Resetter"]
shape = SubResource("RectangleShape2D_4dwou")

[node name="Resetter2" type="Area2D" parent="Resetters"]
position = Vector2(964, 1110)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resetters/Resetter2"]
shape = SubResource("RectangleShape2D_daxvp")

[node name="Background" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
offset_left = -1224.0
offset_top = -1304.0
offset_right = 3144.0
offset_bottom = 881.0
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="GPUParticles2D" type="GPUParticles2D" parent="Background"]
z_index = 11
position = Vector2(867, -1013)
scale = Vector2(11, 11)
amount = 50
process_material = SubResource("ParticleProcessMaterial_1y2dm")
lifetime = 4.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_e45pi")

[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_timer_timeout"]
[connection signal="body_entered" from="Resetters/Resetter" to="GameManager" method="_on_resetter_body_entered"]
[connection signal="body_entered" from="Resetters/Resetter2" to="GameManager" method="_on_resetter_2_body_entered"]
